[package]
name = "recommender"
version = "0.1.0"
authors = ["Allen <allen.gueco1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.0.0"
ndarray = "0.15.2"
num-traits = "0.2.14"
itertools = "0.10.1"